    script name as argument, set ExecutablePath to the script instead of the
    interpreter. Add test case. (LP: #88794)
  * apport/report.py, search_bug_patterns(): Catch all exceptions from
    urlopen(), not just IOError. Sometimes this fails with funnier errors.
    (LP: #89589)
  * bin/apport-retrace: Give some additional explanation when installing
    packages fails. (LP: #89916)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue,  6 Mar 2007 14:24:54 +0100

apport (0.63) feisty; urgency=low

  New feature: fakechroot support for apport-retrace

  * bin/apport-retrace:
    - Simplify program design and throw away the complicated debug symbol
      sandbox generation, along with the -d and -C options.  Instead, directly
      install the missing packages and ddebs with apt. This makes the tool more
      suitable for running in chroots and has often been requested anyway.
    - Add option -u/--unpack-only which causes additionally installed packages
      to be unpacked without being configured and purged again after
      retracing. This allows apport-retrace to work under fakechroot and has
      the nice side effect of speeding up package installation (we do not care
      about configuration for retracing anyway).
  * man/apport-retrace.1: Update description for the new behaviour, drop
    documentation of the -d and -C options, and add documentation of -u.
  * Add apport/chroot.py: Class for representing and working with chroots;
    this uses the fakeroot and fakechroot libraries when being called as
    non-root.
  * Add bin/apport-chroot: CLI frontend for doing various things with
    chroots (including fakeroot/fakechroot support from the Chroot class). For
    now, this implements:
    - create a chroot (tarball or directory)
    - dist-upgrade a particular or all chroots
    - apport-retrace a bug or Apport report file
  * setup.py: Ship apport-chroot in scripts directory.
  * Add a new package apport-retrace which ships apport-retrace and